ie8 fixes for .hidden- and .visible- classes; updated archives shortcode to only print hr btwn issues until the last issue

--- a/versions/v3/static/scss/_utilities.scss
+++ b/versions/v3/static/scss/_utilities.scss
@@ -1,7 +1,24 @@
 // Disable responsiveness in IE8:
-// Create grid for IE8 because it doesn't understand media queries
 .ie8 {
+  // Create grid for IE8 because it doesn't understand media queries
   @include make-grid(md);
+
+  // Fix .visible-, .hidden- classes
+  .hidden-md {
+    @include responsive-invisibility('.hidden-md');
+  }
+
+  .visible-md-block {
+    display: block !important;
+  }
+
+  .visible-md-inline {
+    display: inline !important;
+  }
+
+  .visible-md-inline-block {
+    display: inline-block !important;
+  }
 }
 
 .container {
