--- a/versions/v3/static/scss/_views-page.scss
+++ b/versions/v3/static/scss/_views-page.scss
@@ -133,10 +133,6 @@
     h3 {
       margin-top: 10px;
     }
-
-    &:last-child hr {
-      display: none;
-    }
   }
 
   .results-story-issue {
